# Meeting_Assitant

./: .env.example  .gitignore  PROJECT.md  README.md  main.py  pyproject.toml  test_config.py  test_settings.py
src/: main.py
src/api/: inference.py
src/config/: settings.py
src/models/: schemas.py
